--- a/public/assets/lang/de.json
+++ b/public/assets/lang/de.json
@@ -21,7 +21,7 @@
   "portfolio_name_val": "Sebastian Wachter",
   "portfolio_age": "alter",
   "portfolio_spoken_languages": "gesprochene_sprachen",
-  "portfolio_spoken_languages_val": "Englisch flüssig, Deutsch flüssig",
+  "portfolio_spoken_languages_val": "Englisch fließend, Deutsch fließend",
 
   "portfolio_skills": "skills",
   "portfolio_languages": "programmier_sprachen",
@@ -41,7 +41,7 @@
 
   "portfolio_history": "history",
   "portfolio_2016-tody": "2016-heute",
-  "portfolio_2016-tody_val": "Frontend Entwickler bei hydra-newmedia",
+  "portfolio_2016-tody_val": "Werkstudent bei hydra-newmedia",
   "portfolio_2015-2016": "2015-2016",
   "portfolio_2015-2016_val": "Praxissemester bei hydra-newmedia",
   "portfolio_2013-2017": "2013-vrs. 2017",
