--- a/public/assets/lang/en.json
+++ b/public/assets/lang/en.json
@@ -21,7 +21,7 @@
   "portfolio_name_val": "Sebastian Wachter",
   "portfolio_age": "age",
   "portfolio_spoken_languages": "spoken_languages",
-  "portfolio_spoken_languages_val": "english fluidly, german fluidly",
+  "portfolio_spoken_languages_val": "english fluently, german fluently",
 
   "portfolio_skills": "skills",
   "portfolio_languages": "programming_languages",
@@ -41,7 +41,7 @@
 
   "portfolio_history": "history",
   "portfolio_2016-tody": "2016-today",
-  "portfolio_2016-tody_val": "Frontend developer at hydra-newmedia",
+  "portfolio_2016-tody_val": "Working student at hydra-newmedia",
   "portfolio_2015-2016": "2015-2016",
   "portfolio_2015-2016_val": "Internship semester at hydra-newmedia",
   "portfolio_2013-2017": "2013-likely 2017",
